Update Sidebar + dark mode BETA V1.3.3 (Not Fixed)

--- a/Langwitch/public/css/sidebar.css
+++ b/Langwitch/public/css/sidebar.css
@@ -5,30 +5,39 @@
     --white-side-bg: #FFFFFF;
     --white-bg: #FFF;
     --dark-side-bg: #251945;
-    --dark-bg: #060934;
+    --dark-bg: #1D1533;
 }
 
 * {
     margin: 0;
     padding: 0;
     font-family: 'Nunito', sans-serif;
+
+}
+
+body {
+    overflow: hidden;
+}
+
+.container {
+    position: absolute;
+    display: flex;
+    height: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .sidebar-top {
     padding-right: 125;
 }
 
-.night-mode {
-    display: flex;
-    justify-content: flex-end;
-    width: 50%;
-    position: fixed;
-    left: 47%;
-    top: 47px;
-}
 
 .sidebar {
-    background: var(--white-side-bg);
+    background: var(--white-bg);
+    transform: scale(1);
+    transition: 1000ms ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -43,7 +52,21 @@
         0 8px 8px rgba(28, 28, 28, 0.064),
         0 16px 16px rgba(28, 28, 28, 0.064),
         0 32px 32px rgba(28, 28, 28, 0.064);
+    /* z-index: 5; */
 }
+
+.sidebar.active {
+    transform: scale(1);
+    background: var(--dark-side-bg);
+    transition: 1000ms ease-in-out;
+    box-shadow: 0 1px 1px rgba(28, 28, 28, 0.064),
+        0 2px 2px rgba(28, 28, 28, 0.064),
+        0 4px 4px rgba(28, 28, 28, 0.064),
+        0 8px 8px rgba(28, 28, 28, 0.064),
+        0 16px 16px rgba(28, 28, 28, 0.064),
+        0 32px 32px rgba(28, 28, 28, 0.064);
+}
+
 
 .image-logo-sidebar {
     width: 79px;
@@ -67,12 +90,14 @@
     border-color: transparent;
     height: 64px;
     width: 260px;
+    border-width: 3px;
 }
 
 .exit-sidebar li {
     border-color: transparent;
     border-style: solid;
     border-radius: 50px;
+    border-width: 3px;
     height: 64px;
     width: 260px;
 }
@@ -88,6 +113,37 @@
     gap: 30px;
 }
 
+/* .list-sidebar ul li a.active {
+    color: #FFF;
+} */
+
+
+.change-dark-mode.active {
+    color: #FFF;
+}
+
+.change-dark-mode-1.active {
+    color: #FFF;
+}
+
+.change-dark-mode-2.active {
+    color: #FFF;
+}
+
+.change-dark-mode-3.active {
+    color: #FFF;
+}
+
+.change-dark-mode-4.active {
+    color: #FFF;
+}
+
+.change-dark-mode-5.active {
+    color: #FFF;
+}
+
+
+
 .list-sidebar ul li a img {
     padding-left: 30px;
 }
@@ -100,8 +156,13 @@
     border-color: #9167E3;
     border-style: solid;
     border-radius: 50px;
+    border-width: 3px;
     height: 64px;
     width: 260px;
+}
+
+.list-sidebar ul li.active:hover {
+    border-color: #FFF;
 }
 
 .exit-sidebar li:hover {
@@ -110,8 +171,8 @@
     border-radius: 50px;
     height: 64px;
     width: 260px;
+    border-width: 3px;
 }
-
 
 .exit-sidebar li {
     list-style-type: none;
@@ -128,4 +189,41 @@
     display: flex;
     align-items: center;
     gap: 30px;
+}
+
+.night-mode-toggle {
+    /* background-color: #060934; */
+    background-image: url(../images/Moon.svg);
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    width: 34px;
+    height: 34px;
+    cursor: pointer;
+    z-index: 2;
+    transition: 1000ms;
+    background-repeat: no-repeat;
+
+}
+
+.night-mode-toggle.active {
+    background-image: url(../images/Sun.svg);
+    transition: 1000ms;
+}
+
+
+.container-content-bg {
+    display: flex;
+    transform: scale(0);
+    width: 250vw;
+    height: 250vw;
+    transition: 1000ms ease-in-out;
+    background-color: var(--dark-bg);
+    flex: 0 0 auto;
+
+}
+
+.container-content-bg.active {
+    transform: scale(1);
+    transition: 1000ms ease-in-out;
 }
